--- a/study-app/q1-99.md
+++ b/study-app/q1-99.md
@@ -2227,14 +2227,22 @@ D: Go to the IAM & admin console, grant a user account permissions similar to th
 
 Answer: B
 
+- To use a service account outside of Google Cloud, such as on other platforms or on-premises, you must first establish the identity of the service account. Public/private key pairs provide a secure way of accomplishing this goal.
+
+**Console**
+
+![](images/91-sa-key.png)
+
+**gcloud**
+
 ```
-To use a service account outside of Google Cloud, such as on other platforms or on-premises, you must first establish the identity of the service account. Public/private key pairs provide a secure way of accomplishing this goal.
-
-https://cloud.google.com/iam/docs/creating-managing-service-account-keys
-
 gcloud iam service-accounts keys create KEY_FILE \
     --iam-account=SA_NAME@PROJECT_ID.iam.gserviceaccount.com
 ```
+
+Links:
+
+1. https://cloud.google.com/iam/docs/creating-managing-service-account-keys#creating
 
 <hr />
 
@@ -2251,11 +2259,15 @@ D: Configure the ACLs on each image in Cloud Storage to give read-only access to
 
 Answer: A
 
-```
-https://cloud.google.com/container-registry/docs/access-control
+- A is correct...
+  Container Registry uses Cloud Storage buckets as the underlying storage for container images. You control access to your images by granting appropriate Cloud Storage permissions to a user, group, service account, or other identity.[1]
 
-IAM permissions determine who can access resources. All users, service accounts, and other identities that interact with Container Registry must have the appropriate Cloud Storage permissions.
-```
+- Permissions and roles
+  ![](images/92.png)
+
+**Links:**
+
+1. https://cloud.google.com/container-registry/docs/access-control#grant
 
 <hr />
 
@@ -2280,11 +2292,26 @@ D: View logs of the container in myapp-deployment-58ddbbb995-lp86m pod and check
 
 Answer: C
 
-[Debugging Pods](https://kubernetes.io/docs/tasks/debug/debug-application/debug-pods/#debugging-pods)
+**Debugging Pods**
+
+The first step in debugging a Pod is taking a look at it. Check the current state of the Pod and recent events with the following command:
 
 ```
 kubectl describe pods ${POD_NAME}
 ```
+
+**My pod stays pending**
+
+- If a Pod is stuck in Pending it means that it can not be scheduled onto a node. Generally this is because there are insufficient resources of one type or another that prevent scheduling. Look at the output of the **kubectl describe** ... command above. There should be **messages** from the scheduler about why it can not schedule your pod. Reasons include:
+
+- You don't have enough resources:[2]
+- You are using hostPort:[2]
+
+Links:
+
+1. https://kubernetes.io/docs/tasks/debug/debug-application/debug-pods/#debugging-pods
+
+2. https://kubernetes.io/docs/tasks/debug/debug-application/debug-pods/#my-pod-stays-pending
 
 <hr />
 
@@ -2301,13 +2328,29 @@ D: After the VM has been created, download the JSON private key for the default 
 
 Answer: B
 
-> gcloud beta compute reset-windows-password allows a user to reset and retrieve a password for a Windows virtual machine instance. If the Windows account does not exist, this command will cause the account to be created and the password for that new account will be returned.
+**Generate credentials for Windows VMs**
 
-https://cloud.google.com/sdk/gcloud/reference/beta/compute/reset-windows-password
+- you must generate new credentials before connecting to the VM.
+
+**gcloud**
 
 ```
-gcloud beta compute reset-windows-password my-instance --zone=us-central1-f --user=foo
+
+gcloud compute reset-windows-password VM_NAME
+
 ```
+
+**Console**
+
+![](images/94-1.png)
+![](images/94-2.png)
+![](images/94-3.png)
+
+**Links:**
+
+1. https://cloud.google.com/compute/docs/instances/windows/generating-credentials
+
+2. https://www.youtube.com/watch?v=up1EP-c0GWc&list=PLuJRcdtonlDAN73rZsRk_eiJ0NU9h1Cms&index=4
 
 <hr />
 
@@ -2324,16 +2367,25 @@ D: Enable block project wide keys for the instance. Generate an SSH key and asso
 
 Answer: A
 
-- [Set up OS Login](https://cloud.google.com/compute/docs/oslogin/set-up-oslogin)
-
-- [Enable OS Login](https://cloud.google.com/compute/docs/oslogin/set-up-oslogin#enable_os_login)
-
 ```
+
 gcloud compute instances create VM_NAME \
-  --image-family=IMAGE_FAMILY \
-  --image-project=IMAGE_PROJECT \
-  --metadata enable-oslogin=TRUE
+ --image-family=IMAGE_FAMILY \
+ --image-project=IMAGE_PROJECT \
+ --metadata enable-oslogin=TRUE
+
 ```
+
+- OS Login enables you to control access to virtual machine (VM) instances based on IAM permissions.[1]
+
+- IAM-based access (OS Login)
+  This restricts VM access to users with the Compute OS Login or Compute OS Admin Login role (roles/compute.osLogin, roles/compute.osAdminLogin), or predefined or custom roles with permissions to enable IAM-based access. You assign the role in the IAM & Admin section, IAM page.
+
+![](images/95.png)
+
+**Links:**
+
+1. https://cloud.google.com/compute/docs/oslogin/set-up-oslogin
 
 <hr />
 
@@ -2353,12 +2405,14 @@ Answer: A
 https://cloud.google.com/sdk/gcloud/reference/services/list#--enabled
 
 ```
+
 //--enabled: (DEFAULT) Return the services which the project has enabled.
 gcloud services list --enabled
 
 //--available
 Return the services available to the project to enable.
 gcloud services list --available
+
 ```
 
 <hr />
@@ -2379,13 +2433,17 @@ Answer: D
 https://cloud.google.com/sdk/gcloud/reference/app/services/set-traffic
 
 ```
+
 //To send all traffic to 'v2' of service 's1', run:
 gcloud app services set-traffic s1 --splits=v2=1
+
 ```
 
 ```
+
 //To split traffic evenly between 'v1' and 'v2' of service 's1', run:
 gcloud app services set-traffic s1 --splits=v2=.5,v1=.5
+
 ```
 
 <hr />
@@ -2404,7 +2462,9 @@ D: Select Add GPUs. Add estimated cost for cluster management.
 Answer: A
 
 ```
+
 This one is Tricky, local SSD is require for High IOPS - https://cloud.google.com/compute/docs/disks/local-ssd , but it say using disk snapshots. A is correct.
+
 ```
 
 <hr />
@@ -2423,6 +2483,7 @@ D: Create a HAProxy pod in the cluster to load-balance the traffic to all the po
 Answer: A
 
 ```
+
 // 1. Create a container cluster
 gcloud container clusters create loadbalancedcluster
 
@@ -2434,8 +2495,8 @@ kubectl apply -f web-deployment.yaml
 // 3. Exposing your Deployment inside your cluster
 // load-balancing/web-service.yaml
 kubectl apply -f web-service.yaml
-NAME      TYPE       CLUSTER-IP      EXTERNAL-IP   PORT(S)          AGE
-web       NodePort   10.35.245.219   <none>        8080:32640/TCP   5m
+NAME TYPE CLUSTER-IP EXTERNAL-IP PORT(S) AGE
+web NodePort 10.35.245.219 <none> 8080:32640/TCP 5m
 
 //---
 In the sample output, the node port for the web Service is 32640. Also, note that there is no external IP allocated for this Service. Since the GKE nodes are not externally accessible by default, creating this Service does not make your application accessible from the internet.
@@ -2451,11 +2512,26 @@ kubectl apply -f basic-ingress.yaml
 // 5. Visiting your application
 
 kubectl get ingress basic-ingress
-NAME            HOSTS     ADDRESS         PORTS     AGE
-basic-ingress   *         203.0.113.12    80        2m
+NAME HOSTS ADDRESS PORTS AGE
+basic-ingress \* 203.0.113.12 80 2m
+
 ```
+
+**ClusterIp exposure < NodePort exposure < LoadBalancer exposure**
+
+- ClusterIp
+  Expose service through k8s cluster with ip/name:port
+- NodePort
+  Expose service through Internal network VM's also external to k8s ip/name:port
+- LoadBalancer
+  Expose service through External world or whatever you defined in your LB.
 
 **Links:**
 
 1. https://cloud.google.com/kubernetes-engine/docs/tutorials/http-balancer
 2. https://medium.com/google-cloud/kubernetes-nodeport-vs-loadbalancer-vs-ingress-when-should-i-use-what-922f010849e0
+3. https://stackoverflow.com/questions/41509439/whats-the-difference-between-clusterip-nodeport-and-loadbalancer-service-types
+
+```
+
+```
