--- a/study-app/q1-99.md
+++ b/study-app/q1-99.md
@@ -1831,19 +1831,59 @@ Your company has a 3-tier solution running on Compute Engine. The configuration 
 
 Each tier has a service account that is associated with all instances within it. You need to enable communication on TCP port 8080 between tiers as follows:
 
-"¢ Instances in tier #1 must communicate with tier #2.
-
-"¢ Instances in tier #2 must communicate with tier #3.
+- Instances in tier #1 must communicate with tier #2.
+- Instances in tier #2 must communicate with tier #3.
 
 What should you do?
 
-A: 1. Create an ingress firewall rule with the following settings: "¢ Targets: all instances "¢ Source filter: IP ranges (with the range set to 10.0.2.0/24) "¢ Protocols: allow all 2. Create an ingress firewall rule with the following settings: "¢ Targets: all instances "¢ Source filter: IP ranges (with the range set to 10.0.1.0/24) "¢ Protocols: allow all
+**A:**
 
-B: 1. Create an ingress firewall rule with the following settings: "¢ Targets: all instances with tier #2 service account "¢ Source filter: all instances with tier #1 service account "¢ Protocols: allow TCP:8080 2. Create an ingress firewall rule with the following settings: "¢ Targets: all instances with tier #3 service account "¢ Source filter: all instances with tier #2 service account "¢ Protocols: allow TCP: 8080
+1. Create an ingress firewall rule with the following settings:
+   - Targets: all instances
+   - Source filter: IP ranges (with the range set to 10.0.2.0/24)
+   - Protocols: allow all
+2. Create an ingress firewall rule with the following settings:
+   - Targets: all instances
+   - Source filter: IP ranges (with the range set to 10.0.1.0/24)
+   - Protocols: allow all
 
-C: 1. Create an ingress firewall rule with the following settings: "¢ Targets: all instances with tier #2 service account "¢ Source filter: all instances with tier #1 service account "¢ Protocols: allow all 2. Create an ingress firewall rule with the following settings: "¢ Targets: all instances with tier #3 service account "¢ Source filter: all instances with tier #2 service account "¢ Protocols: allow all
+**B:**
 
-D: 1. Create an egress firewall rule with the following settings: "¢ Targets: all instances "¢ Source filter: IP ranges (with the range set to 10.0.2.0/24) "¢ Protocols: allow TCP: 8080 2. Create an egress firewall rule with the following settings: "¢ Targets: all instances "¢ Source filter: IP ranges (with the range set to 10.0.1.0/24) "¢ Protocols: allow TCP: 8080
+1.  Create an ingress firewall rule with the following settings:
+
+    - Targets: all instances with tier #2 service account
+    - Source filter: all instances with tier #1 service account
+    - Protocols: allow TCP:8080
+
+2.  Create an ingress firewall rule with the following settings:
+    - Targets: all instances with tier #3 service account
+    - Source filter: all instances with tier #2 service account
+    - Protocols: allow TCP: 8080
+
+**C:**
+
+1. Create an ingress firewall rule with the following settings:
+
+- Targets: all instances with tier #2 service account
+- Source filter: all instances with tier #1 service account
+- Protocols: allow all
+
+2. Create an ingress firewall rule with the following settings:
+
+- Targets: all instances with tier #3 service account
+- Source filter: all instances with tier #2 service account
+- Protocols: allow all
+
+**D:**
+
+1. Create an egress firewall rule with the following settings:
+   - Targets: all instances
+   - Source filter: IP ranges (with the range set to 10.0.2.0/24)
+   - Protocols: allow TCP: 8080
+2. Create an egress firewall rule with the following settings: ]
+   - Targets: all instances
+   - Source filter: IP ranges (with the range set to 10.0.1.0/24)
+   - Protocols: allow TCP: 8080
 
 Answer: B
 
@@ -1867,6 +1907,12 @@ C: 1. Create a subnetwork in the same VPC, in europe-west1. 2. Use Cloud VPN to 
 D: 1. Create a VPC and a subnetwork in europe-west1. 2. Peer the 2 VPCs. 3. Create the new instance in the new subnetwork and use the first instance's private address as the endpoint.
 
 Answer: A
+
+- "use the first instance's private address as the endpoint" means that this new instance will be accessing the app via first intance's private IP (so there should be some routing rules created).
+
+![](images/54-1.png)
+![](images/54-2.png)
+![](images/54-3.png)
 
 <hr />
 
@@ -1970,28 +2016,34 @@ D: Assign the engineering team the Billing Account User role on the billing acco
 
 Answer: C
 
+- you can't link project to billing accounts without Project billing manager. C is Correct[3]
 - Billing Account User (roles/billing.user)
+  Project Billing Manager(roles/billing.projectManager)
 
-  > Link projects to billing accounts.
+![](images/87-0.png)
+![](images/87.png)
 
-  > This role allow a user to create new projects linked to the billing account on which the role is granted.
+**Billing Account Creator[2]**
 
-  > Create new billable projects.
+Use Billing Account Creator's role for initial billing setup or to allow creation of additional billing accounts. Users must have this role to sign up for Google Cloud with a credit card using their corporate identity.
 
-- Project Billing Manager(roles/billing.projectManager)
+**Project Billing Manager Vs Billing Account User[2]**
 
-  > Link/unlink the project to/from a billing account.
+- Project Billing Manager is the role in charge of link/unlink the project to/from a billing account as you well said.
 
-  > This role allows a user to attach the project to the billing account, but does not grant any rights over resources.
+- This role allows a user to attach the project to the billing account, but does not grant any rights over resources.
 
-```
-- Billing Account User (roles/billing.user) on the destination billing account
-- Project billing manager (roles/billing.projectManager) on the project
-```
+- As for Billing Account User, the role allows to link projects to billing accounts.
 
-- https://cloud.google.com/billing/docs/how-to/billing-access
-- https://stackoverflow.com/questions/59559885/project-billing-manager-vs-billing-account-user-gcp#:~:text=Project%20Billing%20Manager%20is%20the,link%20projects%20to%20billing%20accounts.
-- https://cloud.google.com/billing/docs/how-to/billing-access#cloud-billing_access-control-examples
+- This role allow a user to create new projects linked to the billing account on which the role is granted.
+
+**Links:**
+
+1. https://cloud.google.com/billing/docs/how-to/billing-access#overview-of-cloud-billing-roles-in-cloud-iam
+
+2. https://stackoverflow.com/questions/59559885/project-billing-manager-vs-billing-account-user-gcp#:~:text=Project%20Billing%20Manager%20is%20the,link%20projects%20to%20billing%20accounts.
+
+3. https://www.examtopics.com/exams/google/associate-cloud-engineer/view/15/
 
 <hr />
 
@@ -2073,12 +2125,16 @@ D: 1. Using Cloud VPN or Interconnect, create a tunnel to a VPC in Google Cloud.
 
 Answer: D
 
-```
-on-prem - app
-GCP - Cloud Storage
-wants to access with internal IP
-on-prem -> Cloud VPN -> D
-```
+- D VPN/interconnect without exposing to public
+- Private Google Access for on-premises hosts provides a way for on-premises systems to connect to Google APIs and services by routing traffic through a Cloud VPN tunnel or a VLAN attachment for Cloud Interconnect. Private Google Access for on-premises hosts is an alternative to connecting to Google APIs and services over the internet.
+
+- Let me walk through an example of Cloud VPN. This diagram shows a simple VPN connection between your VPC and on-premises network. Your VPC network has subnets in us-east1 and us-west1, with GCP resources in each of those regions. These resources are able to communicate using their **internal IP addresses** because routing within a network is automatically configured
+
+![](images/84.png)
+
+**Links:**
+
+1. https://cloud.google.com/vpc/docs/configure-private-google-access-hybrid
 
 <hr />
 
@@ -2097,6 +2153,13 @@ Answer: C
 
 **Integrating with Pub/Sub**
 https://cloud.google.com/run/docs/tutorials/pubsub#integrating-pubsub
+
+Remember this:
+
+- Push subscription -> Pub/Sub server initiates a request to your subscriber client to deliver messages
+- Pull subscription -> Your subscriber client initiates requests to a Pub/Sub server to retrieve messages
+
+Documentation: https://cloud.google.com/pubsub/docs/subscriber
 
 <hr />
 
@@ -2133,18 +2196,20 @@ D: Create a new GCP organization and a new billing account. Migrate the acquired
 
 Answer: A (A will be correct within 24 hours or B)
 
-https://cloud.google.com/resource-manager/docs/project-migration#permissions-billing
+**Billing account permissions**
 
-- [Billing account permissions](https://cloud.google.com/resource-manager/docs/project-migration#permissions-billing)
+- Cloud Billing accounts can be used across organization resources. Moving a project from one organization resource to another won't impact billing, and charges will continue against the old billing account.
 
-  > Cloud Billing accounts can be used across organization resources. Moving a project from one organization resource to another won't impact billing, and charges will continue against the old billing account.
+**Overview of Cloud Billing roles in IAM**
 
-- https://fargyle.medium.com/google-cloud-platform-cross-org-billing-41c5db8fefa6
+![](images/87-0.png)
 
-```
-- Billing Account User (roles/billing.user) on the destination billing account
-- Project billing manager (roles/billing.projectManager) on the project
-```
+![](images/87-1.png)
+
+**Links:**
+
+1. https://cloud.google.com/resource-manager/docs/project-migration#permissions-billing
+2. https://cloud.google.com/billing/docs/how-to/billing-access
 
 <hr />
 
