--- a/study-app/q1-99.md
+++ b/study-app/q1-99.md
@@ -1784,7 +1784,12 @@ D: Create 2 custom VPCs, each with a single subnet. Create each subnet in the sa
 
 Answer: A
 
-- When a custom mode VPC network is created, no subnets are **automatically** created. This type of network provides you with complete control over its subnets and IP ranges. You decide which subnets to create in regions that you choose by using IP ranges that you specify.[1]
+- When a custom mode VPC network is created, no subnets are **automatically** created. [1]
+
+![](images/54-1.png)
+
+**A Custom mode VPC**
+![](images/54-3.png)
 
 **Links:**
 
@@ -1805,6 +1810,14 @@ D: In the Instance Template, add a startup script that sends a heartbeat to the 
 
 Answer: A
 
+**MIGs**
+
+1. Name for the instance group.
+2. Single or Multi-zoned,
+3. Instance Template
+4. Autoscale and under what circumstances.
+5. Health check
+
 <hr />
 
 **Question 73**
@@ -1820,7 +1833,21 @@ C: 1. Create a dedicated Google group in Cloud Identity. 2. Add each data scient
 
 D: 1. Create a dedicated Google group in Cloud Identity. 2. Add each data scientist's user account to the group. 3. Assign the BigQuery dataViewer user role to the group.
 
-Answer: D
+Answer: D (C is correct)
+
+- C is correct, doc's said: When applied to a dataset, dataViewer provides permissions to:
+
+**BigQuery Job User (roles/bigquery.jobUser)**
+
+- Provides permissions to run jobs, including **queries**, within the project.[1]
+
+**BigQuery Data Viewer (roles/bigquery.dataViewer)**
+
+- When applied at the project or organization level, this role can also enumerate all datasets in the project. Additional roles, however, are necessary to allow the running of jobs[2]
+
+**Links: **
+
+1.https://cloud.google.com/bigquery/docs/access-control#bigquery.jobUser 2.https://cloud.google.com/bigquery/docs/access-control#bigquery.dataViewer
 
 <hr />
 
@@ -1929,9 +1956,21 @@ D: 1. Go to the GKE console, and delete existing clusters. 2. Recreate a new clu
 
 Answer: A
 
-<hr />
+The question mentioned that "GKE container emitted a huge number of logs", in my opinion A is correct.
 
-favorite_border
+| Resource type            | Description                                          |
+| ------------------------ | ---------------------------------------------------- |
+| container(GKE Container) | A Google Kubernetes Engine (GKE) container instance. |
+
+- **project_id**:
+- **cluster_name**:
+- **namespace_id**:
+- **instance_id**:
+- **pod_id**:
+- **container_name**:
+- **zone**:
+
+<hr />
 
 **Question 77**
 You have a website hosted on App Engine standard environment. You want 1% of your users to see a new test version of the website. You want to minimize complexity. What should you do?
