--- a/study-app/q1-99.md
+++ b/study-app/q1-99.md
@@ -1675,33 +1675,54 @@ D: Go to Cloud Shell and run gcloud config list to review the Google Cloud confi
 
 Answer: D
 
-https://cloud.google.com/appengine/docs/standard/reference/app-yaml?tab=node.js#top
-
-- The app.yaml file configures your App Engine app's settings. It is required to contain at least a runtime entry.
-
 - I would opt option D : as it would help to check the config details and Option A is not correct, as app.yaml would have only the runtime and script to run parameters and not the Project details
 
+- The web.xml file is only used when deploying a Java app to a runtime that includes the Eclipse Jetty 9/ servlet 3 server.
+
+**app.yaml**
+
+- You configure your App Engine app's settings in the app.yaml file. This file specifies how URL paths correspond to request handlers and static files. The app.yaml file also contains information about your app's code, such as the runtime and the latest version identifier.[1]
+
 ```
-runtime: nodejs18 # required
-
-instance_class: F2 # Automatic scaling: (**F1**, F2, F4, F4_1G). Basic and manual scaling: (B1, **B2**, B4, B4_1G, B8)
-
-env_variables:
-  BUCKET_NAME: "example-gcs-bucket"
+runtime: python27
+api_version: 1
+threadsafe: true
 
 handlers:
+- url: /
+  script: home.app
+
+- url: /index\.html
+  script: home.app
+
 - url: /stylesheets
   static_dir: stylesheets
 
+- url: /(.*\.(gif|png|jpg))$
+  static_files: static/\1
+  upload: static/.*\.(gif|png|jpg)$
+
+- url: /admin/.*
+  script: admin.app
+  login: admin
+
 - url: /.*
-  secure: always
-  redirect_http_response_code: 301
-  script: auto
+  script: not_found.app
 ```
 
-https://cloud.google.com/appengine/docs/flexible/java/configuring-the-web-xml-deployment-descriptor
+**web.xml**
 
-- The web.xml file is only used when deploying a Java app to a runtime that includes the Eclipse Jetty 9/ servlet 3 server.
+- Java web applications use a deployment descriptor file to determine how URLs map to servlets, which URLs require authentication, and other information.[2]
+
+**appengine-web.xml**
+
+- In addition to the web.xml deployment descriptor, App Engine Java applications use a configuration file, named appengine-web.xml,[3]
+
+**Links:**
+
+1. https://cloud.google.com/appengine/docs/legacy/standard/python/config/appref
+2. https://cloud.google.com/appengine/docs/legacy/standard/java/config/webxml
+3. https://cloud.google.com/appengine/docs/legacy/standard/java/config/appref
 
 <hr />
 
@@ -1718,15 +1739,20 @@ D: Create an instance group for the instance. Verify that the'Advanced creation 
 
 Answer: A
 
-- [Set host maintenance policy of a VM](https://cloud.google.com/compute/docs/instances/setting-vm-host-options#settingoptions)
-- onHostMaintenance: determines the behavior when a maintenance event occurs that might cause your VM to reboot.
+**Set host maintenance policy of a VM**
 
-  > MIGRATE: causes Compute Engine to live migrate an instance when there is a maintenance event. This is the default value.
-  > TERMINATE: stops a VM instead of migrating it.
+- **onHostMaintenance**: determines the behavior when a maintenance event occurs that might cause your VM to reboot.
 
-- automaticRestart: determines the behavior when a VM crashes or is stopped by the system.
-  > true: Compute Engine restarts an instance if the instance crashes or is stopped. This is the default value.
-  > false: Compute Engine does not restart a VM if the VM crashes or is stopped.
+  1. MIGRATE: causes Compute Engine to live migrate an instance when there is a maintenance event. This is the default value.
+  2. TERMINATE: stops a VM instead of migrating it.
+
+- **automaticRestart**: determines the behavior when a VM crashes or is stopped by the system.
+
+![](images/68.png)
+
+**Links:**
+
+1. https://cloud.google.com/compute/docs/instances/setting-vm-host-options
 
 <hr />
 
@@ -1845,7 +1871,8 @@ Answer: D (C is correct)
 
 - When applied at the project or organization level, this role can also enumerate all datasets in the project. Additional roles, however, are necessary to allow the running of jobs[2]
 
-**Links: **
+**Links:orrect is C NOT D.
+Option A is wrong as gcloud app restore was used for backup and restore and has been deprecated.Option B is wrong as there is no application revert functionality available.Option D is wrong as App Engine maintains version and need not be redeployed.**
 
 1.https://cloud.google.com/bigquery/docs/access-control#bigquery.jobUser 2.https://cloud.google.com/bigquery/docs/access-control#bigquery.dataViewer
 
