--- a/study-app/q1-99.md
+++ b/study-app/q1-99.md
@@ -1593,28 +1593,24 @@ D: Increase the initial delay of the HTTP health check to 200 seconds.
 
 Answer: D
 
-[Autohealing behavior](https://cloud.google.com/compute/docs/instance-groups/autohealing-instances-in-migs#example_health_check_set_up)
+- D is correct. The reason is that when you do health check, you want the VM to be working. Do the first check after initial setup time of 3 mins = 180 s < 200 s is reasonable.
 
-- In this example, a VM is marked as healthy if it returns successfully once. It is marked as unhealthy if it returns unsuccessfully 3 consecutive times.
+**MIGs**
 
-```
-gcloud compute health-checks create http example-check --port 80 \
-       --check-interval 30s \
-       --healthy-threshold 1 \
-       --timeout 10s \
-       --unhealthy-threshold 3
-```
+- (MIGs) maintain high availability of your applications by proactively keeping your virtual machine (VM) instances available,
+- If a managed instance stops running, but the change of state was not initiated by the MIG, then the MIG automatically recreates that instance.
+- Changes of instance state that are not initiated by the MIG include:
+  1. Hardware failures.
+  2. Infrastructure maintenance events when the VM instance is not set to live migrate.
 
-- Apply the health check by configuring an autohealing policy for your regional or zonal MIG.
+**Autohealing behavior**
+Autohealing doesn't recreate a VM during that VM's initialization period. For more information, see the autoHealingPolicies[].initialDelaySec property.
 
-- The initial-delay setting delays autohealing from potentially prematurely recreating the VM if the VM is in the process of starting up. The initial delay timer starts when the VM's currentAction field changes to VERIFYING
+![](images/64.png)
 
-```
-gcloud compute instance-groups managed update my-mig \
-        --health-check example-check \
-        --initial-delay 300 \
-        --zone us-east1-b
-```
+**Links:**
+
+1. https://cloud.google.com/compute/docs/instance-groups/autohealing-instances-in-migs#example_health_check_set_up
 
 <hr />
 
