--- a/study-app/q1-99.md
+++ b/study-app/q1-99.md
@@ -1497,6 +1497,9 @@ D: Create a new GCP project and create an App Engine application inside this new
 
 Answer: D
 
+- Yes, and you can't change an App Engine application region once created
+- Each Cloud project can contain only a single App Engine application, and once created you cannot change the location of your App Engine application.
+
 <hr />
 
 **Question 59**
@@ -1526,6 +1529,16 @@ C: Select the latest available cluster version for your GKE cluster.
 D: Select "Container-Optimized OS (cos)" as a node image for your GKE cluster.
 
 Answer: B
+
+![](images/60-00.png)
+![](images/60-02.png)
+![](images/60-03.png)
+![](images/60-04.png)
+
+Links:
+
+1. https://cloud.google.com/kubernetes-engine/docs/how-to/node-auto-upgrades
+2. https://youtu.be/ODqpwJZrSKI
 
 <hr />
 
