--- a/study-app/q1-99.md
+++ b/study-app/q1-99.md
@@ -1094,6 +1094,10 @@ Answer: B (D is NOT correct so B is the answer.)
 
 - If the VM instance has a public IP address and firewall rules permit RDP access, use an RDP client. For more information, see Microsoft Remote Desktop clients to connect to the Windows instance.[1]
 
+![](images/94-1.png)
+![](images/94-2.png)
+![](images/94-3.png)
+
 **Links:**
 
 1. https://cloud.google.com/compute/docs/instances/connecting-to-windows#before-you-begin
