--- a/study-app/q1-99.md
+++ b/study-app/q1-99.md
@@ -837,6 +837,14 @@ D: In the Google Cloud Platform Console, use the'create role' functionality and 
 
 Answer: A
 
+- The correct answer is Option A.
+
+- To create the same IAM roles in a production project as in a development project, using the fewest possible steps, you can use the gcloud iam roles copy command and specify the production project as the destination project.
+
+- The `gcloud iam roles copy` command allows you to copy IAM roles between projects or organizations. By specifying the production project as the destination project, you can copy the IAM roles from the development project to the production project.
+
+- Option B is incorrect because specifying your organization as the destination organization will copy the IAM roles to all projects within the organization, which is not what you want.
+
 ```
 //To create a copy of an existing role spanner.databaseAdmin into a project with PROJECT_ID, run:
 gcloud iam roles copy --source="roles/spanner.databaseAdmin" --destination=CustomSpannerDbAdmin --dest-project=PROJECT_ID
