--- a/study-app/q1-99.md
+++ b/study-app/q1-99.md
@@ -675,18 +675,15 @@ D: Create a managed instance group. Verify that the autoscaling setting is on.
 
 Answer: C
 
-- Autohealing lets you automatically restart apps that are compromised. It promptly detects failed instances and recreates them automatically, so clients can be served again. With autohealing, you no longer need to manually bring an app back to service after a failure.
+- Option C is correct because creating a managed instance group allows you to use autohealing to automatically recreate VMs that are unresponsive after 3 attempts of 10 seconds each. You can set the Autohealing health check to healthy (HTTP) to specify the health check that determines whether the instances are considered healthy or not. If an instance becomes unresponsive, Autohealing will recreate the instance and attach it to the managed instance group.
 
-**The app includes the following Compute Engine components:[1]**
-
-- Health check: an HTTP health check policy used by the autohealer to detect failed VM instances.
-- Firewall rules: Google Cloud firewall rules let you allow or deny traffic to your instances.
-- Managed instance group: A group of instances running the same demo web service.
-- Instance template: A template used to create each instance in the instance group.
+- Pro Tip: Use separate health checks for load balancing and for autohealing. Health checks for load balancing detect unresponsive instances and direct traffic away from them. Health checks for autohealing detect and recreate failed instances, so they should be less aggressive than load balancing health checks. Using the same health check for these services would remove the distinction between unresponsive instances and failed instances, causing unnecessary latency and unavailability for your users.
 
 **Links:**
 
 1. https://cloud.google.com/compute/docs/tutorials/high-availability-autohealing
+
+![](images/25.png)
 
 <hr />
 
