--- a/study-app/q1-99.md
+++ b/study-app/q1-99.md
@@ -752,6 +752,13 @@ D: In the Google Cloud Platform Console, create a new billing account and set up
 
 Answer: C
 
+- C is incomplete. Moving projects under an organisation doesn't change their linked billing project.
+  https://cloud.google.com/resource-manager/docs/migrating-projects-billing
+
+- Note: The link between projects and billing accounts is preserved, irrespective of the hierarchy. When you move your existing projects into the organization they will continue to work and be billed as they used to before the migration, even if the corresponding billing account has not been migrated yet.
+
+- D is incomplete as well, after setting the billing account in the organisation you need to link the projects to the new billing account.
+
 - https://cloud.google.com/billing/docs/how-to/billing-access#relationships-between-resources
 
 <hr />
