--- a/study-app/q1-99.md
+++ b/study-app/q1-99.md
@@ -777,6 +777,26 @@ D: Start the licensing server with an automatic ephemeral IP address, and then p
 
 Answer: A
 
+- The correct answer is Option A.
+
+- To deploy the licensing server on Compute Engine and ensure that the application can reach it, you should reserve the IP 10.0.3.21 as a static internal IP address and assign it to the licensing server.
+
+- By reserving IP 10.0.3.21 as a static internal IP address, you can ensure that the application can reach the licensing server at that IP address without changing the application's configuration.
+
+- To reserve the IP 10.0.3.21 as a static internal IP address and assign it to a Compute Engine instance using gcloud, you can use the following command:
+
+```
+gcloud compute instances create [INSTANCE_NAME] --address [IP_ADDRESS] --no-address
+```
+
+- Replace [INSTANCE_NAME] with the name of the Compute Engine instance that you want to create, and [IP_ADDRESS] with the desired static internal IP address (in this case, 10.0.3.21).
+
+- The --no-address flag specifies that the instance should not be assigned a public IP address.
+
+**Links:**
+
+https://cloud.google.com/sdk/gcloud/reference/compute/instances/create#--address
+
 <hr />
 
 **Question 30**
@@ -1303,16 +1323,32 @@ D: Storage Object Creator
 
 Answer: B
 
-- https://cloud.google.com/storage/docs/access-control/iam-roles#standard-roles
+Correct Answer is (B):
 
-- Storage Object Admin (roles/storage.objectAdmin)
+- Storage Admin (roles/storage.admin) Grants full control of buckets and objects.
+  When applied to an individual bucket, control applies only to the specified bucket and objects within the bucket.
 
-  > Grants full control over objects, including listing, creating, viewing, and deleting objects.
+- firebase.projects.get
+- resourcemanager.projects.get
+- resourcemanager.projects.list
+- **storage.buckets**
+- **storage.objects**
 
-- Storage Object Creator (roles/storage.objectCreator)
-  > Allows users to create objects. Does not give permission to view, delete, or replace objects.
-- Storage Admin (roles/storage.admin)
-  > Grants full control of buckets and objects.
+**Storage Object Admin (roles/storage.objectAdmin)**
+
+- Grants full control over objects, including listing, creating, viewing, and deleting objects.
+
+**Storage Object Creator (roles/storage.objectCreator)**
+
+- Allows users to create objects. Does not give permission to view, delete, or replace objects.
+
+**Storage Admin (roles/storage.admin)**
+
+- Grants full control of buckets and objects.
+
+Links:
+https://cloud.google.com/storage/docs/access-control/iam-roles
+
   <hr />
 
 **Question 50** You have an object in a Cloud Storage bucket that you want to share with an external company. The object contains sensitive data. You want access to the content to be removed after four hours. The external company does not have a Google account to which you can grant specific user-based access privileges. You want to use the most secure method that requires the fewest steps. What should you do?
