--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -331,7 +331,23 @@ Answer: B
 - Standard(0 day), Nearline(30 days), Coldline(90 days), Archive (365 days)
 
 ![](images/111-storage-classes.png)
-https://cloud.google.com/storage/docs/storage-classes
+
+**Public Access**
+
+![](images/111-public-access.png)
+
+**Enable or suspend versioning**
+
+```
+gsutil versioning get gs://<bucket_name>...
+gsutil versioning set (on|off) gs://<bucket_name>...
+```
+
+![](images/111-versioning.png)
+
+Links:
+
+1. https://cloud.google.com/storage/docs/storage-classes
 
 <hr />
 
