--- a/study-app/q1-99.md
+++ b/study-app/q1-99.md
@@ -62,17 +62,21 @@ ssh-rsa AAAZHu+Sf3B3x0/2e6si3+IHbAlHIFEvNHrqtvPGE5rIuGL1Yf9OEcAJVNri2fdTj3YVn9AL
 
 **Question 2** You need to create a custom VPC with a single subnet. The subnet's range must be as large as possible. Which range should you use?
 
-A: 0.0.0.0/0
-
-B: 10.0.0.0/8
-
-C: 172.16.0.0/12
-
-D: 192.168.0.0/16
+- A: 0.0.0.0/0
+- B: 10.0.0.0/8
+- C: 172.16.0.0/12
+- D: 192.168.0.0/16
 
 Answer: B
 
 **Explanation**
+
+- 1. 24-bit block 10.0.0.0/8 (16777216 IP Addresses)
+- 2. 20-bit block 172.16.0.0/12 (1048576 IP Addresses)
+- 3. 16-bit block 192.168.0.0/16 (65536 IP Addresses)
+- VPC network (auto/custom)
+- subnet:
+- When an auto mode VPC network is created, one subnet from each region is automatically created within it.
 
 - https://cloud.google.com/vpc/docs/vpc#restricted-ranges
 
@@ -699,7 +703,7 @@ C: Use kubectl config get-contexts to review the output.
 
 D: Use kubectl config use-context and kubectl config view to review the output.
 
-Answer: C
+Answer: C (D will be correct)
 
 ```
 kubectl config get-contexts
@@ -708,12 +712,7 @@ CURRENT   NAME          CLUSTER AUTHINFO           NAMESPACE
           black         black   dazwilkin
 ```
 
-```
-kubectl config use-context black
-Switched to context "black"
-kubectl config use-context white
-Switched to context "white"
-```
+- D is correct. A lot details mentioned in this group. Here I only say about eliminating answers. As we go down to between C and D. The question is want to review a inactive configure. So, to me, C is viewing info about all configure while D is apply a specific config and viewing it. So I eliminate C to go with D.
 
 - C is correct , Use kubectl config get-contexts to review the output : shows the clusters and the configurations and based on the output we can identify the inactive configurations
 
